--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Jordan Brist
+# Jordan Brist
 Week 2: I learned more about GitHub, file types, direcories, plaintext, and markdown. There weren't many challenges or successes to be had this week.
